<resources>
    <string name="app_name">Guidomia</string>
    <string name="open_menu">Open the menu</string>
    <string name="car_price">Price: %dk</string>
    <string name="error_unknown">Unknown error</string>
    <string name="could_not_load_cars">Could not load the list of cars</string>
    <string name="pros">Pros:</string>
    <string name="cons">Cons:</string>
    <string name="tacoma">Tacoma 2021</string>
    <string name="tacoma_subtitle">Get your\'s now</string>
    <string name="filters">Filters</string>
    <string name="select_car_maker">Select Car maker</string>
    <string name="select_car_model">Select Car Model</string>
</resources>